<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="leonardo.scherer.excalculadoradoamor.MainActivity"
    android:background="@color/gray400">

    <Button
        android:id="@+id/btn_botao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_botao"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="1.0" />

    <Button
        android:id="@+id/btn_testenome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_testenome"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_telasigno"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_telasigno"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_testenome"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btn_testecapilar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_testecapilar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_telasigno"
        app:layout_constraintHorizontal_bias="0.502" />

    <Button
        android:id="@+id/btn_testeidade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_testeidade"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_testecapilar" />

    <Button
        android:id="@+id/btn_testecorolhos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_testecorolhos"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_testeidade" />

</android.support.constraint.ConstraintLayout>
