<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="leonardo.scherer.excalculadoradoamor.TelaCabelo">

    <Spinner
        android:id="@+id/sp_cabelo"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:entries="@array/sp_cabelo"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/et_cabelo"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Spinner
        android:id="@+id/sp_cabelocrush"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:entries="@array/sp_cabelocrush"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/et_cabelocrush"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_calculocabelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_calculocabelo"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/sp_cabelocrush"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/et_cabelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/et_cabelo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/et_cabelocrush"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/et_cabelocrush"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_cabelo" />
</android.support.constraint.ConstraintLayout>
